apps/tandoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tandoor
  namespace: tandoor
  labels:
    app.kubernetes.io/name: tandoor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tandoor
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
