apps/tandoor/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tandoor
  namespace: tandoor
  labels:
    app.kubernetes.io/name: tandoor
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tandoor.oisd.io`)
      kind: Rule
      services:
        - name: tandoor
          port: 80
      middlewares:
        - name: default-chain
          namespace: traefik
  tls:
    secretName: wildcard-tls-oisd
